--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -12,18 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :author %><br>
+    <%= f.label :autor %><br>
     <%= f.text_field :author %>
   </div>
   <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :titulo %><br>
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
+    <%= f.label :descripción %><br>
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :aceptar %>
   </div>
 <% end %>
