--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New book</h1>
+<h1>Ingrese nuevo libro</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', books_path %>
+<%= link_to 'Atras', books_path %>
