--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,14 +2,14 @@
 
   <div class="centrar">
     <div class="logo">
-      Logo
+        <%=image_tag("uni.png")%>
     </div>
     <nav>
 
           <a href="#">Inicio</a>
           <a href="#">Información</a>
+          <a href="#">Libros Digitales</a>
           <a href="#">Contacto</a>
-
 
       </nav>
   </div>
