--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,7 +23,7 @@
         <th class="columnas">Autor</th>
         <th class="columnas">Título</th>
         <th class="columnas">Descripción</th>
-        <th></th>
+        <th class="columnas">Opciones Genrales</th>
         <th></th>
         <th></th>
       </tr>
