--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,6 +24,9 @@
     <%= f.text_area :description %>
   </div>
   <div class="actions">
-    <%= f.submit :aceptar %>
+        <%= f.submit :Aceptar, :class => "btn btn-success"%>
   </div>
+
+
+
 <% end %>
