--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -14,37 +14,61 @@
       </nav>
   </div>
 </header>
+<body>
+  <div class="contenedor">
+    <center><h1 >Universidad Nacional de Ingeniera</h1></center>
+    <h1>Libros Generales</h1>
+    <div class="div_tabla">
+      <table>
+        <thead>
 
-<div class="contenedor">
-  <h1>Libros Generales</h1>
-  <table>
-    <thead>
-      <tr>
-        <th class="columnas">Autor</th>
-        <th class="columnas">Título</th>
-        <th class="columnas">Descripción</th>
-        <th class="columnas">Opciones Genrales</th>
-        <th></th>
-        <th></th>
-      </tr>
-    </thead>
+          <tr>
+            <th >Autor</th>
+            <th >Título</th>
+            <th >Descripción</th>
+            <th >Opciones Genrales</th>
+            <th</th>
+            <th</th>
+          </tr>
+        </thead>
+    </div>
 
-    <tbody>
-      <% @books.each do |book| %>
-        <tr>
-          <td><%= book.author %></td>
-          <td><%= book.title %></td>
-          <td><%= book.description %></td>
-          <td><%= link_to 'Mostrar', book %></td>
-          <td><%= link_to 'Editar', edit_book_path(book) %></td>
-          <td><%= link_to 'Eliminar', book, method: :delete, data: { confirm: 'Esta seguro que desea borrar el registro?' } %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
 
-</div>
+      <tbody>
+        <% @books.each do |book| %>
+          <tr>
+            <td><%= book.author %></td>
+            <td><%= book.title %></td>
+            <td><%= book.description %></td>
+            <td>
+              <%= link_to 'Mostrar', book %>
+              <%= link_to 'Editar', edit_book_path(book) %>
+              <%= link_to 'Eliminar', book, method: :delete, data: { confirm: 'Esta seguro que desea borrar el registro?' } %>
+            </td>
 
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+
+  </div>
+
+</body>
+
+<!--
+<footer>
+  <section class = "container">
+            <p class= "parrafo text-left">
+						Derechos Reservados 2015
+					 </p>
+					<p class="parrafo tex-left" id="derecha">
+					    Autor: Cristhian Antonio Aguirre Corea.
+					</p>
+		</section>
+  </section>
+
+</footer>
+
+-->
 <br>
-
 <%= link_to 'Ingresar nuevo libro', new_book_path %>
